--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,6 @@
 <div class="publications">
   <h2>Selected publications</h2>
+  {% raw %}
   {% bibliography -f papers -q @*[selected=true]* %}
+  {% endraw %}
 </div>
